// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomProgressBar /> Displays 0% for no progress (0/10) 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      {
        "alignItems": "center",
      },
      {
        "justifyContent": "space-around",
      },
    ]
  }
>
  <View
    animated={true}
    animationConfig={
      {
        "bounciness": 0,
      }
    }
    animationType="spring"
    indeterminate={false}
    indeterminateAnimationDuration={1000}
    onLayout={[Function]}
    progress={0}
    style={
      [
        {
          "backgroundColor": "#D8EFF3",
          "borderColor": "#246670",
          "borderRadius": 8,
          "borderWidth": 0,
          "overflow": "hidden",
          "width": 750,
        },
        undefined,
      ]
    }
    useNativeDriver={false}
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#246670",
          "height": 133.4,
          "transform": [
            {
              "translateX": -2.842170943040401e-14,
            },
            {
              "translateX": -375,
            },
            {
              "scaleX": 0.0001,
            },
          ],
        }
      }
    />
  </View>
  <Text
    style={
      [
        {
          "paddingLeft": 20,
          "paddingRight": 20,
        },
        {
          "textAlign": "center",
        },
        {
          "fontFamily": "Montserrat-Bold",
        },
        {
          "fontSize": 12,
        },
        {
          "color": "#383838",
        },
        {
          "color": "#628397",
        },
      ]
    }
  >
    0
    /
    10
  </Text>
</View>
`;

exports[`<CustomProgressBar /> Displays 25% (2/8) 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      {
        "alignItems": "center",
      },
      {
        "justifyContent": "space-around",
      },
    ]
  }
>
  <View
    animated={true}
    animationConfig={
      {
        "bounciness": 0,
      }
    }
    animationType="spring"
    indeterminate={false}
    indeterminateAnimationDuration={1000}
    onLayout={[Function]}
    progress={0.25}
    style={
      [
        {
          "backgroundColor": "#D8EFF3",
          "borderColor": "#246670",
          "borderRadius": 8,
          "borderWidth": 0,
          "overflow": "hidden",
          "width": 750,
        },
        undefined,
      ]
    }
    useNativeDriver={false}
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#246670",
          "height": 133.4,
          "transform": [
            {
              "translateX": -2.842170943040401e-14,
            },
            {
              "translateX": -281.25,
            },
            {
              "scaleX": 0.250075,
            },
          ],
        }
      }
    />
  </View>
  <Text
    style={
      [
        {
          "paddingLeft": 20,
          "paddingRight": 20,
        },
        {
          "textAlign": "center",
        },
        {
          "fontFamily": "Montserrat-Bold",
        },
        {
          "fontSize": 12,
        },
        {
          "color": "#383838",
        },
        {
          "color": "#628397",
        },
      ]
    }
  >
    2
    /
    8
  </Text>
</View>
`;

exports[`<CustomProgressBar /> Displays 50% (5/10) 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      {
        "alignItems": "center",
      },
      {
        "justifyContent": "space-around",
      },
    ]
  }
>
  <View
    animated={true}
    animationConfig={
      {
        "bounciness": 0,
      }
    }
    animationType="spring"
    indeterminate={false}
    indeterminateAnimationDuration={1000}
    onLayout={[Function]}
    progress={0.5}
    style={
      [
        {
          "backgroundColor": "#D8EFF3",
          "borderColor": "#246670",
          "borderRadius": 8,
          "borderWidth": 0,
          "overflow": "hidden",
          "width": 750,
        },
        undefined,
      ]
    }
    useNativeDriver={false}
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#246670",
          "height": 133.4,
          "transform": [
            {
              "translateX": -2.842170943040401e-14,
            },
            {
              "translateX": -187.5,
            },
            {
              "scaleX": 0.50005,
            },
          ],
        }
      }
    />
  </View>
  <Text
    style={
      [
        {
          "paddingLeft": 20,
          "paddingRight": 20,
        },
        {
          "textAlign": "center",
        },
        {
          "fontFamily": "Montserrat-Bold",
        },
        {
          "fontSize": 12,
        },
        {
          "color": "#383838",
        },
        {
          "color": "#628397",
        },
      ]
    }
  >
    5
    /
    10
  </Text>
</View>
`;

exports[`<CustomProgressBar /> Displays 100% for full progress (10/10) 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      {
        "alignItems": "center",
      },
      {
        "justifyContent": "space-around",
      },
    ]
  }
>
  <View
    animated={true}
    animationConfig={
      {
        "bounciness": 0,
      }
    }
    animationType="spring"
    indeterminate={false}
    indeterminateAnimationDuration={1000}
    onLayout={[Function]}
    progress={1}
    style={
      [
        {
          "backgroundColor": "#D8EFF3",
          "borderColor": "#246670",
          "borderRadius": 8,
          "borderWidth": 0,
          "overflow": "hidden",
          "width": 750,
        },
        undefined,
      ]
    }
    useNativeDriver={false}
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#246670",
          "height": 133.4,
          "transform": [
            {
              "translateX": -2.842170943040401e-14,
            },
            {
              "translateX": 0,
            },
            {
              "scaleX": 1,
            },
          ],
        }
      }
    />
  </View>
  <Text
    style={
      [
        {
          "paddingLeft": 20,
          "paddingRight": 20,
        },
        {
          "textAlign": "center",
        },
        {
          "fontFamily": "Montserrat-Bold",
        },
        {
          "fontSize": 12,
        },
        {
          "color": "#383838",
        },
        {
          "color": "#628397",
        },
      ]
    }
  >
    10
    /
    10
  </Text>
</View>
`;

exports[`<CustomProgressBar /> Limits display to 0% for negative progress (-2/10) 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      {
        "alignItems": "center",
      },
      {
        "justifyContent": "space-around",
      },
    ]
  }
>
  <View
    animated={true}
    animationConfig={
      {
        "bounciness": 0,
      }
    }
    animationType="spring"
    indeterminate={false}
    indeterminateAnimationDuration={1000}
    onLayout={[Function]}
    progress={0}
    style={
      [
        {
          "backgroundColor": "#D8EFF3",
          "borderColor": "#246670",
          "borderRadius": 8,
          "borderWidth": 0,
          "overflow": "hidden",
          "width": 750,
        },
        undefined,
      ]
    }
    useNativeDriver={false}
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#246670",
          "height": 133.4,
          "transform": [
            {
              "translateX": -2.842170943040401e-14,
            },
            {
              "translateX": -375,
            },
            {
              "scaleX": 0.0001,
            },
          ],
        }
      }
    />
  </View>
  <Text
    style={
      [
        {
          "paddingLeft": 20,
          "paddingRight": 20,
        },
        {
          "textAlign": "center",
        },
        {
          "fontFamily": "Montserrat-Bold",
        },
        {
          "fontSize": 12,
        },
        {
          "color": "#383838",
        },
        {
          "color": "#628397",
        },
      ]
    }
  >
    -2
    /
    10
  </Text>
</View>
`;

exports[`<CustomProgressBar /> Limits display to 100% for excess progress (15/10) 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      {
        "alignItems": "center",
      },
      {
        "justifyContent": "space-around",
      },
    ]
  }
>
  <View
    animated={true}
    animationConfig={
      {
        "bounciness": 0,
      }
    }
    animationType="spring"
    indeterminate={false}
    indeterminateAnimationDuration={1000}
    onLayout={[Function]}
    progress={1}
    style={
      [
        {
          "backgroundColor": "#D8EFF3",
          "borderColor": "#246670",
          "borderRadius": 8,
          "borderWidth": 0,
          "overflow": "hidden",
          "width": 750,
        },
        undefined,
      ]
    }
    useNativeDriver={false}
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#246670",
          "height": 133.4,
          "transform": [
            {
              "translateX": -2.842170943040401e-14,
            },
            {
              "translateX": 0,
            },
            {
              "scaleX": 1,
            },
          ],
        }
      }
    />
  </View>
  <Text
    style={
      [
        {
          "paddingLeft": 20,
          "paddingRight": 20,
        },
        {
          "textAlign": "center",
        },
        {
          "fontFamily": "Montserrat-Bold",
        },
        {
          "fontSize": 12,
        },
        {
          "color": "#383838",
        },
        {
          "color": "#628397",
        },
      ]
    }
  >
    15
    /
    10
  </Text>
</View>
`;
